# kite-aso

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  aso.py  benchmark.py  pyproject.toml  requirements.txt  setup.sh  tc.py  terminalcore.py
.github/workflows/: publish.yml
.specify/: feature.json  init-options.json
.specify/templates/: constitution-template.md  spec-template.md  tasks-template.md
config/: capability_catalog.json  source_registry.json
core/: __init__.py  analyzer.py  fetcher.py  ios_fetcher.py  keywords.py  reporter.py  watchlist.py
specs/001-enterprise-aso-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-enterprise-aso-platform/checklists/: requirements.md
specs/001-enterprise-aso-platform/contracts/: analysis-report.schema.json
src/: __init__.py
src/aso_platform/: __init__.py  capabilities.py  cli.py  models.py  registry.py  saas_app.py  storage.py  tui_charts.py
src/aso_platform/providers/: __init__.py  apple_store.py  play_store.py
src/aso_platform/web/: app.css  (+2 more)
src/terminalcore/: __init__.py  __main__.py
terminalcore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_cli_intelligence.py  test_cli_json.py  test_saas_app.py  test_terminalcore_tui.py
tests/unit/: __init__.py  test_app_inspector.py  test_branding.py  test_capabilities.py  test_intelligence.py  test_keyword_discovery.py  test_keyword_input.py  test_keyword_rank.py  test_local_store.py  test_registry.py  test_saas_store.py  test_terminalcore_adapter.py  test_terminalcore_config.py  test_terminalcore_doctor.py  test_terminalcore_wizard.py  test_tui_charts.py  test_tui_dashboard.py  test_workspace_service.py
(+60 files in other folders)
